--- a/VCModel.vcxproj.filters
+++ b/VCModel.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClInclude Include="include\crc32c\crc32c.h">
       <Filter>Include\Crc32C</Filter>
     </ClInclude>
+    <ClInclude Include="cmeshserializer.h">
+      <Filter>Source\Model\Serialize</Filter>
+    </ClInclude>
+    <ClInclude Include="meshencoder.h">
+      <Filter>Source\Model\Serialize</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -139,6 +145,12 @@
     </ClCompile>
     <ClCompile Include="src\meshbuffers.cpp">
       <Filter>Source\Model\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="cmeshserializer.cpp">
+      <Filter>Source\Model\Serialize</Filter>
+    </ClCompile>
+    <ClCompile Include="meshencoder.cpp">
+      <Filter>Source\Model\Serialize</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
