--- a/VCModel.vcxproj
+++ b/VCModel.vcxproj
@@ -43,10 +43,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cmeshserializer.h" />
     <ClInclude Include="include\BinaryIO.h" />
     <ClInclude Include="include\crc32c\crc32c.h" />
-    <ClInclude Include="meshencoder.h" />
+    <ClInclude Include="src\cmeshserializer.h" />
     <ClInclude Include="src\cmodelserializer.h" />
     <ClInclude Include="src\cmodelserializer_ver.h" />
     <ClInclude Include="src\common.h" />
@@ -56,6 +55,7 @@
     <ClInclude Include="src\dll\interface_serialize.h" />
     <ClInclude Include="src\dll\pch.h" />
     <ClInclude Include="src\meshbuffers.h" />
+    <ClInclude Include="src\meshencoder.h" />
     <ClInclude Include="src\meshshapes.h" />
     <ClInclude Include="src\meshtags.h" />
     <ClInclude Include="src\modelfile.h" />
@@ -64,9 +64,8 @@
     <ClInclude Include="src\wavefront.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cmeshserializer.cpp" />
     <ClCompile Include="include\BinaryIO.cpp" />
-    <ClCompile Include="meshencoder.cpp" />
+    <ClCompile Include="src\cmeshserializer.cpp" />
     <ClCompile Include="src\cmodelserializer.cpp" />
     <ClCompile Include="src\cmodelserializer_ver.cpp" />
     <ClCompile Include="src\common.cpp" />
@@ -77,6 +76,7 @@
     <ClCompile Include="src\dll\pch.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\meshbuffers.cpp" />
+    <ClCompile Include="src\meshencoder.cpp" />
     <ClCompile Include="src\meshshapes.cpp" />
     <ClCompile Include="src\modelfile.cpp" />
     <ClCompile Include="src\skinmodel.cpp" />
