--- a/VCModel.vcxproj.filters
+++ b/VCModel.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="src\meshencoder.h">
       <Filter>Source\Model\Serializer</Filter>
     </ClInclude>
+    <ClInclude Include="src\meshshapes_serialize.h">
+      <Filter>Source\Model\Mesh</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -151,6 +154,9 @@
     </ClCompile>
     <ClCompile Include="src\meshencoder.cpp">
       <Filter>Source\Model\Serializer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\meshshapes_serialize.cpp">
+      <Filter>Source\Model\Mesh</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
